Fixed edit sprint long sprint name overflow

--- a/frontend/src/app/components/edit-sprint-dialog/edit-sprint-dialog.component.sass
+++ b/frontend/src/app/components/edit-sprint-dialog/edit-sprint-dialog.component.sass
@@ -96,3 +96,7 @@ tasque-dropdown.input
 
 strong
   font-weight: bold
+
+.sprint-name
+  word-wrap: break-word
+  max-width: 400px
